[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI components/DIALOG/Dialog_box_with_keys.gd" type="Script" id=1]
[ext_resource path="res://assets/dialogue.tres" type="Texture" id=2]
[ext_resource path="res://Scenes/UI components/Menu_rpg.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/themedark_letters_label.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI components/Two_option_menu.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 238, 46 )

[sub_resource type="Theme" id=2]
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 1 )

[node name="Dialog_box" type="Node2D"]
position = Vector2( 0, 8 )
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_top = 375.647
margin_right = 1016.0
margin_bottom = 567.647
theme = SubResource( 2 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 48.0
margin_top = 40.0
margin_right = 680.0
margin_bottom = 152.0
theme = ExtResource( 4 )
text = "%s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_rpg" parent="." instance=ExtResource( 3 )]

[node name="two_option_menu" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Menu_rpg" to="." method="_on_Menu_rpg_pressed"]
[connection signal="is_pressed" from="two_option_menu" to="." method="_on_two_option_menu_is_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
